--- a/index.html
+++ b/index.html
@@ -124,9 +124,56 @@
     		<input class="btn" type="submit">
     	</form>
     </div>
-    <div class="weather"></div>
+    <div class="weather">
+    	<h3>Погода</h3>
+    </div>
+    <div class="reklama">
+    	
+    </div>
+</div>
+<div class="bottom">
+	<h3>Программы правительства республики казахстан</h3>
+	<div class="bottom-1">
+		<div class="banner-1 col-md-12 col-lg-12">
+			<div>
+				<img src="images/banner2.png" alt="">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem vitae</p>
+			</div>
+			<div>
+				<img src="images/banner3.png" alt="">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem vitae</p>
+			</div>
+			<div>
+				<img src="images/banner2.png" alt="">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem vitae</p>
+			</div>
+			<div>
+				<img src="images/banner3.png" alt="">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem vitae</p>
+			</div>
+			<div>
+				<img src="images/banner2.png" alt="">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem vitae</p>
+			</div>
+			<div>
+				<img src="images/banner3.png" alt="">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem vitae</p>
+			</div>
+			<div>
+				<img src="images/banner2.png" alt="">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem vitae</p>
+			</div>
+			<div>
+				<img src="images/banner3.png" alt="">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem vitae</p>
+			</div>
+		</div>
+	</div>
+	
+	<div class="bottom-2"></div>
 </div>
 </div>
+
 
 
 </div>
